[tool.poetry]
name = "dumbdown"
version = "1.0.6"
description = "*Extremely* _simple_ markdown-ish format"
authors = ["Jeff Kerr <jeff@casefleet.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ipdb = "^0.13.13"
ipython = "^8.18.1"
Faker = "^21.0.0"
black = "^23.12.0"
isort = "^5.13.2"
flake8 = "^6.1.0"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
